New yaml strategy